--- a/index.html
+++ b/index.html
@@ -21,67 +21,42 @@
         .stripe {
             padding: 2px;
         }
+
+        #sortButton{
+            float: right;
+        }
     </style>
+    <script type="text/javascript" src="tfl.js"></script>
 </head>
 
 <body>
+
+    <button id="sortButton" onclick="replaceHTMLWithSortedVersion(); this.style.display = 'none'">Sort</button>
+    <div id="stripesContainer"></div>
 </body>
 <script>
     'use strict'
 
-    const tflColourStandard = {
-        "Corporate": {
-            "Corporate Blue": [0, 15, 159],
-            "Corporate Yellow": [255, 205, 0],
-            "Corporate Black": [0, 0, 0],
-            "Corporate Grey": [123, 134, 140],
-            "Corporate Red": [225, 37, 27],
-            "Corporate Green": [0, 121, 52],
-            "Corporate White": [255, 255, 255],
-            "Corporate Dark Grey": [50, 62, 72]
-        },
-        "Mode": {
-            "Transport for London": [0, 15, 159],
-            "London Cable Car (IFS Cloud Cable Car)": [115, 79, 160],
-            "London River Services": [0, 160, 223],
-            "DLR": [0, 175, 170],
-            "London Coaches": [251, 168, 0],
-            "London Trams": [118, 188, 33],
-            "Elizabeth line": [119, 61, 189],
-            "London Dial-a-Ride": [192, 40, 185],
-            "London Underground": [0, 15, 159],
-            "London Buses": [225, 37, 27],
-            "London Overground": [238, 118, 35],
-            "Santander Cycles": [239, 56, 36]
-        },
-        "Safety": {
-            "Safety Blue": [0, 92, 185],
-            "Corporate Yellow": [255, 205, 0],
-            "Corporate Black": [0, 0, 0],
-            "Corporate Red": [225, 37, 27],
-            "Corporate Green": [0, 121, 52],
-            "Corporate White": [255, 255, 255]
-        },
-        "London Underground": {
-            "Bakerloo line": [166, 90, 42],
-            "Hammersmith & City line": [236, 155, 173],
-            "Piccadilly line": [0, 15, 159],
-            "Central line": [225, 37, 27],
-            "Jubilee line": [123, 134, 140],
-            "Victoria line": [0, 160, 223],
-            "Circle line": [255, 205, 0],
-            "Metropolitan line": [135, 15, 84],
-            "Waterloo & City line": [107, 205, 178],
-            "District line": [0, 121, 52],
-            "Northern line": [0, 0, 0]
-        },
-        "Other": {
-            "Congestion Charge": [206, 14, 45],
-            "Low Emission Zone (green)": [94, 151, 50],
-            "Oyster (dark blue)": [0, 15, 159],
-            "Oyster (cyan)": [0, 157, 217],
-            "Legible London (yellow)": [240, 188, 11],
-            "Legible London (blue)": [0, 32, 67]
+    // nice but we don't use it
+    function sortByKey(array, key) {
+        return array.sort(function (a, b) { return a[key] - b[key]; });
+    }
+
+    // way nicer
+    function getSortMethod() {
+        var _args = Array.prototype.slice.call(arguments);
+        return function (a, b) {
+            for (var x in _args) {
+                var ax = a[_args[x].substring(1)];
+                var bx = b[_args[x].substring(1)];
+                var cx;
+
+                ax = typeof ax == "string" ? ax.toLowerCase() : ax / 1;
+                bx = typeof bx == "string" ? bx.toLowerCase() : bx / 1;
+
+                if (_args[x].substring(0, 1) == "-") { cx = ax; ax = bx; bx = cx; }
+                if (ax != bx) { return ax < bx ? -1 : 1; }
+            }
         }
     }
 
@@ -94,49 +69,43 @@
             var rgbArray = paletteCols[col]
             returnHTML += `<div class="stripe" style="background: rgb(${rgbArray[0]}, ${rgbArray[1]}, ${rgbArray[2]})"><span class="colourPalette">${palette}</span> - <span class="colourName">${col}</span></div>`
         }
-        document.getElementsByTagName("body")[0].innerHTML = returnHTML
+        document.getElementById("stripesContainer").innerHTML = returnHTML
     }
 
     // but what if they were sorted?
     function replaceHTMLWithSortedVersion() {
         var allColoursSorted = {}
         var allColoursSortedLookup = {}
-        var sortedCols
-        var sortedHTML
+        var sortedCols = []
+        var sortedHTML = ""
 
-        function leftpad(input_string, pad_string, target_length) {
-            var outstring = input_string
-            while (outstring.length < target_length) {
-                outstring = pad_string + outstring
-            }
-            return outstring
-        }
-
+        // sort by hue
         for (var palette in tflColourStandard) {
             var paletteCols = tflColourStandard[palette]
             for (var col in paletteCols) {
                 var rgbArray = paletteCols[col]
-                allColoursSorted[col] = parseInt(rgbArray.map(x => leftpad(x.toString(16), "0", 2)).join(""), 16) // convert to hex string then back to decimal int
+                var hslArray = RGBToHSL(rgbArray[0], rgbArray[1], rgbArray[2])
+                var hue = hslArray[0]
+                var sat = hslArray[1]
+                var lum = hslArray[2]
+
+                // add to dict
+                sortedCols.push({ "hue": hue, "sat": sat, "lum": lum, "palette": palette, "col": col, "rgbArray": rgbArray })
             }
         }
 
-        // swap keys and values
-        for (var col in allColoursSorted) {
-            allColoursSortedLookup[allColoursSorted[col]] = col
+        // sort by hsl, then alphabetically
+        sortedCols = sortedCols.sort(getSortMethod('+hue', '+sat', '+lum', '+palette', '+col'));
+
+        for (var i = 0; i < sortedCols.length; i++) {
+            var sc = sortedCols[i]
+            var palette = sc["palette"]
+            var col = sc["col"]
+            var rgb = sc["rgbArray"].join(",")
+            sortedHTML += `<div class="stripe" style="background: rgb(${rgb})"><span class="colourPalette">${palette}</span> - <span class="colourName">${col}</span></div>`
         }
 
-
-        // do sorted HTML
-        for (var deccol in allColoursSortedLookup) {
-            var hexcol = leftpad(parseInt(deccol).toString(16), "0", 6)
-            var colname = allColoursSortedLookup[deccol]
-            // console.log(deccol, hexcol, colname)
-            sortedHTML += `<div class="stripe" style="background: #${hexcol}"><span class="colourName">${colname}</span></div>`
-        }
-
-        document.getElementsByTagName("body")[0].innerHTML = sortedHTML
-
-        return allColoursSorted
+        document.getElementById("stripesContainer").innerHTML = sortedHTML
     }
 
     function RGBToHSL(r, g, b) {
