--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             box-shadow: 0px 0px 5px black;
             transition: box-shadow 0.5s, background 0.5s;
             transform: translate(-50%, -50%);
+            text-align: center;
         }
 
         #sortButton:hover {
